--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <a href="Completed/Ball.html">Ball</a>
         <a href="Completed/LiquiVoid.html">LiquiVoid</a>
         <a href="Completed/Ripple.html">Ripple</a>
+        <a href="Completed/Hex.html">Color Palette</a>
         <!--
-        <a href="Completed/QR Generator.html">QR Generator</a>
         <a href="Completed/QR Reader.html">QR Reader</a>
         <a href="Completed/Word of the day.html">Random Meanings</a>  
         <a href="Completed/Quotes.html">Random Quotes</a>   
